src/test/resources/org/rust/ide/inspections/fixtures/duplicate_trait_type.rs
trait T {
    type A;
    type <error descr="Duplicate associated type 'A'">A</error>;
    type <error descr="Duplicate associated type 'A'">A</error>: bool;
}
